--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
             <li><a class="footer-list relative" href="#">blog</a></li>
             <li><a class="footer-list relative " href="#">FAQ</a></li>
             <li><a class="footer-list relative " href="#">Call Center</a></li>
-            <li><a class="footer-list relative " href="#">Partner With Us</a></li>r
+            <li><a class="footer-list relative " href="#">Partner With Us</a></li>
             <li><a class="footer-list relative " href="#">Terms & Condition</a></li>
           </ul>
           </div>
