--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <header>
       <div class="container">
         <div class="flex justify-between mt-8 items-center">
-          <img src="/public/img/Frame 332.png" alt="Icon Img" />
+          <img src="./img/Frame 332.png" alt="Icon Img" />
           <ul class="capitalize hidden md:flex gap-x-8 lg:gap-x-14 font-Lato">
             <li><a class="hover:text-red-450" href="#">about</a></li>
             <li><a class="hover:text-red-450" href="#">car</a></li>
@@ -655,7 +655,7 @@
               <ul class="socials"></ul>
             </div>
             <div class="flex flex-col">
-              <img src="/public/img/Contact-Us/Mask group.png" alt="mask" />
+              <img src="./img/Contact-Us/Mask group.png" alt="mask" />
               <a
                 href="#"
                 class="mx-auto md:ml-7 mt-8 flex-center text-red-450 border-[3px] w-[195px] h-[58px] transition-colors rounded-sm border-red-450 hover:bg-red-450 hover:text-white font-LatoBold"
