all Image Links Clear

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link
       rel="shortcut icon"
-      href="/public/img/Vector.svg"
+      href="./img/Vector.svg"
       type="image/x-icon"
     />
   </head>
@@ -485,12 +485,12 @@
           >
             <img
               class="mt-40 sm:w-[400px] md:w-[500px] absolute hidden md:block -right-16 top-20 sm:top-auto md:right-0 xl:w-full"
-              src="/public/img/Toyota Camry Home 1.png"
+              src="./img/Toyota Camry Home 1.png"
               alt="Toyota camery"
             />
             <img
               class="absolute max-w-[300px] right-0 md:hidden"
-              src="/public/img/Toyota Camry Home 1 Mobile.png"
+              src="./img/Toyota Camry Home 1 Mobile.png"
               alt=""
             />
           </div>
@@ -727,7 +727,7 @@
       <div class="container">
         <div class="flex items-start justify-around md:justify-between flex-wrap gap-x-8 gap-y-20">
           <div>
-            <img src="/public/img/Frame 332.png" alt="Icon" class="mb-7" />
+            <img src="./img/Frame 332.png" alt="Icon" class="mb-7" />
             <p class="text-[15px] text-[#A6A6A6] max-w-[380px]">
               We are a well-known car rental service that has many partners in
               each region to connect with you to assist in your trip in
@@ -782,6 +782,6 @@
       class="w-full h-full fixed bg-black/40 top-0 hidden md:hidden"
       id="overlay"
     ></div>
-    <script src="/public/scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
