--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rental Car</title>
-    <base href="https://ashkannaseri2112.github.io/Rental-Car/">
+    <!-- <base href="https://ashkannaseri2112.github.io/Rental-Car/" /> -->
     <link rel="stylesheet" href="./styles/app.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,11 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="shortcut icon"
-      href="./img/Vector.svg"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./img/Vector.svg" type="image/x-icon" />
   </head>
   <body class="font-Lato overflow-x-hidden">
     <svg class="hidden">
@@ -398,7 +394,9 @@
             <li><a class="hover:text-red-450" href="#">car</a></li>
             <li><a class="hover:text-red-450" href="#">become partner</a></li>
             <li>
-              <a class="hover:text-red-450" href="#">Terms& Conditions</a>
+              <a id="condition" class="hover:text-red-450" href="#">
+                Terms& Conditions
+              </a>
             </li>
             <li><a class="hover:text-red-450" href="#">Contact Us</a></li>
           </ul>
@@ -726,9 +724,11 @@
     </main>
     <footer class="mt-32">
       <div class="container">
-        <div class="flex items-start justify-around md:justify-between flex-wrap gap-x-8 gap-y-20">
+        <div
+          class="flex items-start justify-around md:justify-between flex-wrap gap-x-8 gap-y-20"
+        >
           <div>
-            <img src="./img/Frame 332.png" alt="Icon" class="mb-7" />
+            <img src="/Rental-Car/img/Frame 332.png" alt="Icon" class="mb-7" />
             <p class="text-[15px] text-[#A6A6A6] max-w-[380px]">
               We are a well-known car rental service that has many partners in
               each region to connect with you to assist in your trip in
@@ -757,7 +757,9 @@
               class="child:capitalize child:text-[#A6A6A6] child:font-MontserratRegular flex flex-col gap-y-3"
             >
               <li><a class="footer-list relative" href="#">instant Rent</a></li>
-              <li><a class="footer-list relative" href="#">private Driver</a></li>
+              <li>
+                <a class="footer-list relative" href="#">private Driver</a>
+              </li>
               <li><a class="footer-list relative" href="#">Long Trip</a></li>
             </ul>
           </div>
@@ -766,14 +768,18 @@
               Support
             </h3>
             <ul
-            class="child:capitalize child:text-[#A6A6A6] child:font-MontserratRegular flex flex-col gap-y-3"
-          >
-            <li><a class="footer-list relative" href="#">blog</a></li>
-            <li><a class="footer-list relative " href="#">FAQ</a></li>
-            <li><a class="footer-list relative " href="#">Call Center</a></li>
-            <li><a class="footer-list relative " href="#">Partner With Us</a></li>
-            <li><a class="footer-list relative " href="#">Terms & Condition</a></li>
-          </ul>
+              class="child:capitalize child:text-[#A6A6A6] child:font-MontserratRegular flex flex-col gap-y-3"
+            >
+              <li><a class="footer-list relative" href="#">blog</a></li>
+              <li><a class="footer-list relative" href="#">FAQ</a></li>
+              <li><a class="footer-list relative" href="#">Call Center</a></li>
+              <li>
+                <a class="footer-list relative" href="#">Partner With Us</a>
+              </li>
+              <li>
+                <a class="footer-list relative" href="#">Terms & Condition</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -783,6 +789,6 @@
       class="w-full h-full fixed bg-black/40 top-0 hidden md:hidden"
       id="overlay"
     ></div>
-    <script src="./scripts/script.js"></script>
+    <script src="/Rental-Car/scripts/script.js"></script>
   </body>
 </html>
